--- a/Reports/Отчет - Петров 382006-3м.html
+++ b/Reports/Отчет - Петров 382006-3м.html
@@ -15676,30 +15676,29 @@ Epoch 40/40
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<ol>
-<li>Patrick Wagner, Nils Strodthoff, Ralf-Dieter Bousseljot, Dieter Kreiseler, Fatima I.Lunze, Wojciech Samek, and Tobias Schaeffter. Ptb-xl, a large publicly available electrocardiography dataset. Scientific Data, 7(1):1–15, 2020.</li>
-</ol>
-<ol>
-<li>Victor Moskalenko, Nikolai Zolotykh, and Grigory Osipov. Deep learning for ecg segmentation. In International Conference on Neuroinformatics, pages 246–254. Springer, 2019.</li>
-</ol>
-<ol>
-<li>Kachuee Mohammad and Fazeli Shayan and Sarrafzadeh Majid. Ecg heartbeat classification: A deep transferable representation. 2018 IEEE International Conference on Healthcare Informatics (ICHI), pages 443-444. IEEE, 2018.</li>
-</ol>
-<ol>
-<li>Feng Kai. Myocardial infarction classification based on convolutional neural network and recurrent neural network. Applied Sciences, 9(9):1879, 2019</li>
-</ol>
-<ol>
-<li>Nils Strodthoff and Claas Strodthoff. Detecting and interpreting myocardial infarction using fully convolutional neural networks. Physiological measurement, 20(1):015001, 2019.</li>
-</ol>
-<ol>
-<li>World Health Organization. Fight cardiovascular disease. 2018. URL <a href="https://www.who.int/cardiovascular_diseases/ru/">https://www.who.int/cardiovascular_diseases/ru/</a>.</li>
-</ol>
-<ol>
-<li>ISO Central Secretary, “Health informatics – Standard communication protocol – Part 91064: Computer-assisted electrocardiography,” International Organization for Standardization, Geneva, CH, Standard ISO 11073-91064:2009, 2009.</li>
-</ol>
+<p>1. Patrick Wagner, Nils Strodthoff, Ralf-Dieter Bousseljot, Dieter Kreiseler, Fatima I.Lunze, Wojciech Samek, and Tobias Schaeffter. Ptb-xl, a large publicly available electrocardiography dataset. Scientific Data, 7(1):1–15, 2020.</p>
+<p>2. Victor Moskalenko, Nikolai Zolotykh, and Grigory Osipov. Deep learning for ecg segmentation. In International Conference on Neuroinformatics, pages 246–254. Springer, 2019.</p>
+<p>3. Kachuee Mohammad and Fazeli Shayan and Sarrafzadeh Majid. Ecg heartbeat classification: A deep transferable representation. 2018 IEEE International Conference on Healthcare Informatics (ICHI), pages 443-444. IEEE, 2018.</p>
+<p>4. Feng Kai. Myocardial infarction classification based on convolutional neural network and recurrent neural network. Applied Sciences, 9(9):1879, 2019</p>
+<p>5. Nils Strodthoff and Claas Strodthoff. Detecting and interpreting myocardial infarction using fully convolutional neural networks. Physiological measurement, 20(1):015001, 2019.</p>
+<p>6. World Health Organization. Fight cardiovascular disease. 2018. URL <a href="https://www.who.int/cardiovascular_diseases/ru/">https://www.who.int/cardiovascular_diseases/ru/</a>.</p>
+<p>7. ISO Central Secretary, “Health informatics – Standard communication protocol – Part 91064: Computer-assisted electrocardiography,” International Organization for Standardization, Geneva, CH, Standard ISO 11073-91064:2009, 2009.</p>
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+    </div>
+</div>
+</div>
+
 </div>
     </div>
   </div>
